tests/neg/i9014.check
-- Error: tests/neg/i9014.scala:4:25 -----------------------------------------------------------------------------------
4 |  val tests = summon[Bar] // error: Failed to expand!
  |                         ^
  |                         Failed to expand!
